[package]

name = "emerge-presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
rand = "0.8"
nix = { version = "0.25", features = ["fs"] }
mio = { version = "0.8", features = ["net", "os-poll", "os-ext"]}
indoc = "1.0.7"
